--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Heebo:300,400,700&display=swap');
+
+
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Heebo', sans-serif !important;
+}
+
 .App {
   text-align: center;
 }
@@ -23,11 +32,19 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-wrapper {
+  min-height: 500px;
+  padding: 0px 200px;
+  box-sizing: border-box;
+  background-color: #f5f7fa;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.header-wrapper > h1 {
+  color: #2c3e50;
+  font-size: 42px;
+  font-weight: 700;
+  margin-bottom: 30px;
 }
