--- a/src/App.css
+++ b/src/App.css
@@ -37,16 +37,21 @@
 .header-wrapper {
   min-height: 500px;
   box-sizing: border-box;
-  background-color: #f5f7fa;
+  background-color: #FE3A02;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 .header-wrapper h1 {
-  color: #2c3e50;
+  color: #fff;
   font-size: 42px;
   font-weight: 700;
+}
+.header-wrapper p {
+  color: #CBC5D7;
+  line-height: 28px;
+  margin: 15px 0;
 }
 .search-style {
   padding: 20px 30px;
