--- a/src/App.css
+++ b/src/App.css
@@ -46,11 +46,13 @@
 .header-wrapper {
   min-height: 500px;
   box-sizing: border-box;
-  background-color: #111114;
+  background-color: #EAE5E6;
+  background: linear-gradient(to right, rgb(242, 112, 156), rgb(255, 148, 114));
 
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border-bottom-left-radius: 200px;
 }
 .header-wrapper h1 {
   color: #fff;
@@ -58,7 +60,7 @@
   font-weight: 700;
 }
 .header-wrapper p {
-  color: var(--secondary-color);
+  color: #f5f5f5;
   line-height: 28px;
   margin: 15px 0;
 }
@@ -102,6 +104,7 @@
   box-shadow: 0 2px 7px rgba(0,0,0,.1);
   word-wrap: break-word;
   word-break: break-all;
+  border: 0.2px solid var(--grey);
 }
 .content .subtitle {
   font-size: 14px;
@@ -117,9 +120,10 @@
   width: auto;
   padding: 10px 25px;
   border-radius: 5px;
-  background-color: var(--primary-color);
-  color: #fff;
+  background-color: rgba(95,209,249,1);
+  color: #ffffff;
   font-size: 14px;
   display: block;
   margin: 0 auto;
+  font-weight: 700;
 }
